# NebulaKV

./: .clang-tidy  .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  CMakeLists.txt.before-protoc-fix  CMakePresets.json  Dockerfile  NebulaKV-Phase2-SHA256.txt  README.md  apply-nebulakv-phase2.sh  docker-compose.yml
.github/workflows/: ci.yml
app/: main.cpp
benchmarks/: CMakeLists.txt  compaction_benchmark.cpp  core_benchmark.cpp  key_value_store_benchmark.cpp  raft_benchmark.cpp  raft_benchmark.cpp.backup-20260624T075948Z  sstable_benchmark.cpp
client/: main.cpp
cluster/: main.cpp
cmake/: Formatting.cmake  ProjectOptions.cmake
config/: cluster.env.example
docs/: architecture.md  benchmarking.md  fault-testing.md  operations.md
include/industry_starter/: core.hpp
include/nebulakv/: block_cache.hpp  bloom_filter.hpp  checksum_calculator.hpp  data_block.hpp  durability_mode.hpp  entry.hpp  in_memory_key_value_store.hpp  index_block.hpp  key_value_store.hpp  manifest.hpp  memtable.hpp  memtable_set.hpp  persistent_key_value_store.hpp  recovery_manager.hpp  sstable_error.hpp  sstable_footer.hpp  sstable_level.hpp  sstable_manager.hpp  sstable_metadata.hpp  sstable_reader.hpp  sstable_writer.hpp  storage_limits.hpp  validation.hpp  wal_reader.hpp  wal_record.hpp  wal_writer.hpp
include/nebulakv/distributed/: cluster_client.hpp  cluster_server.hpp  cluster_service.hpp  grpc_raft_transport.hpp  raft_grpc_service.hpp
include/nebulakv/network/: bounded_executor.hpp  grpc_client.hpp  grpc_server.hpp  grpc_service.hpp  request_processor.hpp
include/nebulakv/observability/: json_logger.hpp  metrics.hpp  metrics_http_server.hpp
include/nebulakv/raft/: fault_injecting_transport.hpp  in_memory_transport.hpp  node.hpp  state_machine.hpp  storage.hpp  transport.hpp  types.hpp
logs/: node-1.jsonl  node-2.jsonl  node-3.jsonl
proto/nebulakv/v1/: key_value_service.proto
scripts/: ci-cluster-smoke.sh  run-three-node.sh  run-workload.sh  stop-three-node.sh
scripts-backup-20260624T074914Z/: run-three-node.sh  stop-three-node.sh
server/: main.cpp
src/: block_cache.cpp  bloom_filter.cpp  checksum_calculator.cpp  core.cpp  in_memory_key_value_store.cpp  manifest.cpp  memtable.cpp  memtable_set.cpp  persistent_key_value_store.cpp  recovery_manager.cpp  sstable_format.cpp  sstable_format.hpp  sstable_manager.cpp  sstable_reader.cpp  sstable_writer.cpp  validation.cpp  wal_format.cpp  wal_format.hpp  wal_reader.cpp  wal_writer.cpp
src/distributed/: cluster_client.cpp  cluster_server.cpp  cluster_service.cpp  grpc_raft_transport.cpp  raft_grpc_service.cpp
src/network/: bounded_executor.cpp  grpc_client.cpp  grpc_server.cpp  grpc_service.cpp  request_processor.cpp
src/observability/: json_logger.cpp  metrics.cpp  metrics_http_server.cpp
src/raft/: fault_injecting_transport.cpp  in_memory_transport.cpp  node.cpp  serialization.hpp  state_machine.cpp  storage.cpp  types.cpp
tests/: CMakeLists.txt  block_cache_test.cpp  bloom_filter_test.cpp  bounded_executor_test.cpp  checksum_calculator_test.cpp  core_test.cpp  grpc_service_test.cpp  in_memory_key_value_store_test.cpp  memtable_set_test.cpp  memtable_test.cpp  observability_test.cpp  persistent_key_value_store_test.cpp  raft_node_test.cpp  raft_snapshot_test.cpp  raft_storage_test.cpp  recovery_manager_test.cpp  request_processor_test.cpp  sstable_manager_test.cpp  sstable_writer_reader_test.cpp  test_support.hpp  wal_writer_reader_test.cpp
tests/support/: crash_writer.cpp
tools/: workload_main.cpp
